# langchain-rust

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  renovate.json
.github/workflows/: ci.yml
examples/: agent.rs  conversational_chain.rs  conversational_retriever_chain_with_vector_store.rs  conversational_retriever_simple_chain.rs  conversational_retriver_chain_with_vector_store.rs  conversational_retriver_simple_chain.rs  dynamic_semantic_routes.rs  embedding_azure_open_ai.rs  embedding_fastembed.rs  embedding_llama.cpp.rs  embedding_mistralai.rs  embedding_ollama.rs  embedding_openai.rs  git_commits.rs  llm.rs  llm_alibaba_qwen.rs  llm_anthropic_claude.rs  llm_azure_open_ai.rs  llm_chain.rs  llm_chain_deepseek.rs  llm_chain_qwen.rs  llm_deepseek.rs  llm_deepseek_advanced.rs  llm_llama.cpp.rs  llm_ollama.rs  llm_openai.rs  llm_qwen_advanced.rs  open_ai_tools_agent.rs  qa_chain.rs  rcommiter.rs  semantic_routes.rs  sequential_chain.rs  simple_chain.rs  speec2text_openai.rs  speech2text_openai.rs  sql_chain.rs  streaming_from_chain.rs  text_to_speech.rs  vector_store_opensearch.rs  vector_store_postgres.rs  (+7 more)
examples/vector_store_surrealdb/: Cargo.toml
examples/vector_store_surrealdb/src/: main.rs
scripts/: run-pgvector
src/: lib.rs
src/agent/: agent.rs  error.rs  executor.rs  mod.rs
src/agent/chat/: builder.rs  chat_agent.rs  mod.rs  output_parser.rs  parse.rs  prompt.rs
src/agent/open_ai_tools/: agent.rs  builder.rs  mod.rs  prompt.rs
src/chain/: chain_trait.rs  error.rs  llm_chain.rs  mod.rs  options.rs  question_answering.rs
src/chain/conversational/: builder.rs  mod.rs  prompt.rs
src/chain/conversational_retrieval_qa/: builder.rs  conversational_retrieval_qa.rs  mod.rs
src/chain/conversational_retrival_qa/: builder.rs  conversational_retrival_qa.rs  mod.rs
src/chain/sequential/: builder.rs  chain.rs  mod.rs
src/chain/sql_datbase/: builder.rs  chain.rs  mod.rs  prompt.rs
src/chain/stuff_documents/: builder.rs  chain.rs  mod.rs
src/chat_models/openai/: mod.rs
src/document_loaders/: dir_loader.rs  document_loader.rs  error.rs  mod.rs
src/document_loaders/csv_loader/: csv_loader.rs  mod.rs
src/document_loaders/git_commit_loader/: git_commit_loader.rs  mod.rs
src/document_loaders/html_loader/: html_loader.rs  mod.rs
src/document_loaders/html_to_markdown_loader/: html_to_markdown_loader.rs  mod.rs
src/document_loaders/pandoc_loader/: mod.rs  pandoc_loader.rs
src/document_loaders/pdf_loader/: lo_loader.rs  local_loader.rs  mod.rs  pdf_extract_loader.rs
src/document_loaders/source_code_loader/: language_parsers.rs  mod.rs  source_code_loader.rs
src/document_loaders/test_data/: example.rs
src/document_loaders/text_loader/: mod.rs  text_loader.rs
src/embedding/: embedder_trait.rs  error.rs  helpers.rs  mod.rs
src/embedding/fastembed/: fastembed.rs  mod.rs
src/embedding/mistralai/: mistralai_embedder.rs  mod.rs
src/embedding/ollama/: mod.rs  ollama_embedder.rs
src/embedding/openai/: mod.rs  openai_embedder.rs
src/language_models/: chat_model.rs  error.rs  llm.rs  mod.rs  options.rs
src/llm/: mod.rs
src/llm/claude/: client.rs  error.rs  mod.rs  models.rs
src/llm/cloude/: client.rs  mod.rs  models.rs
src/llm/deepseek/: client.rs  error.rs  mod.rs  models.rs
src/llm/ollama/: client.rs  mod.rs  openai.rs
src/llm/openai/: client.rs  helper.rs  mod.rs  request.rs
src/llm/openrouter/: client.rs  error.rs  mod.rs  models.rs
src/llm/qwen/: client.rs  error.rs  mod.rs  models.rs
src/memory/: dummy_memory.rs  mod.rs  simple_memory.rs  window_buffer.rs
src/output_parsers/: error.rs  markdown_parser.rs  mod.rs  output_parser.rs  simple_parser.rs
src/prompt/: chat.rs  error.rs  mod.rs  plain_prompt_args.rs  prompt.rs
src/schemas/: agent.rs  chain.rs  convert.rs  document.rs  function.rs  guided_output.rs  input_variable.rs  llm.rs  memory.rs  message_template.rs  message_type.rs  messages.rs  mod.rs  prompt.rs  prompt_template.rs  response_format.rs  response_format_openai_like.rs  retrievers.rs  retrivers.rs  stream.rs  streaming_func.rs  tools_openai_like.rs
src/semantic_router/: error.rs  mod.rs  route_layer.rs  router.rs  utils.rs
src/semantic_router/index/: error.rs  index.rs  local_index.rs  memory_index.rs  mod.rs
src/semantic_router/route_layer/: builder.rs  error.rs  mod.rs  route_layer.rs
src/template/: error.rs  message_template.rs  mod.rs  prompt_template.rs
src/text_splitter/: error.rs  markdown_splitter.rs  mod.rs  options.rs  plain_text_splitter.rs  recursive_character.rs  text_splitter.rs  token_splitter.rs
src/tools/: mod.rs  results.rs  tool.rs
src/tools/command_executor/: command_executor.rs  mod.rs
src/tools/duckduckgo/: duckduckgo_search.rs  mod.rs
src/tools/scraper/: mod.rs  scraper.rs
src/tools/search/: article.rs  mod.rs  search_result.rs
src/tools/search/duckduckgo/: duckduckgo_search.rs
src/tools/search/serpapi/: serpapi.rs
src/tools/serpapi/: mod.rs  serpapi.rs
src/tools/sql/: mod.rs  sql.rs
src/tools/sql/postgres/: mod.rs  postgres.rs
src/tools/text2speech/: mod.rs  speech_storage.rs
src/tools/text2speech/openai/: client.rs  mod.rs  models.rs
src/tools/tool_field/: array.rs  mod.rs  object.rs  tool_field.rs
src/tools/tool_field/primitives/: boolean.rs  integer.rs  mod.rs  number.rs  string.rs  trait.rs
src/tools/wolfram/: mod.rs  wolfram.rs
src/vectorstore/: mod.rs  options.rs  vectorstore.rs
src/vectorstore/opensearch/: builder.rs  mod.rs  opensearch.rs
src/vectorstore/pgvector/: builder.rs  mod.rs  pgvector.rs
src/vectorstore/qdrant/: builder.rs  mod.rs  qdrant.rs
src/vectorstore/sqlite_vec/: builder.rs  mod.rs  sqlite_vec.rs
src/vectorstore/sqlite_vss/: builder.rs  mod.rs  sqlite_vss.rs
src/vectorstore/surrealdb/: builder.rs  mod.rs  surrealdb.rs
