[package]
name = "vector_store_surrealdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.97"
langchain-rust = { path = "../..", features = ["surrealdb"] }
surrealdb = { version = "2.2.1", features = ["kv-mem"] }
tokio = { version = "1.44.2", features = ["full"] }
